# war-room

./: .env.example  .gitignore  .gitmodules  pyproject.toml
api/: auth.py  auth_utils.py  main.py  models.py  routes.py  ui_routes.py
api/static/: stream.js
api/templates/: _sidebar_items.html  base.html  conversation.html  investigations.html  landing.html
docs/02-implementation/: phase-plan.md
docs/03-decisions/: ADR-001-vision-and-scope.md  ADR-002-iteration-loop-design.md  ADR-003-mcp-contract.md  ADR-004-prompting-strategy-source-routing.md  ADR-005-memory-visibility-auth.md  ADR-006-investigation-document-format.md  ADR-007-conversation-persistence.md  ADR-008-tech-stack-and-package-layout.md  ADR-009-mcp-client-design.md  ADR-010-orchestrator-and-skill-invocation.md  ADR-011-protected-decisions.md
docs/06-testing/: anchor-use-case-e2e.md
docs/specs-for-external-sessions/: pulse-mcp-spec.md  release-agent-mcp-spec.md
knowledge/: README.md  repo-platform-mapping.md
knowledge/investigation-playbooks/: README.md  metric-drop-release-correlation.md
knowledge/metrics/: README.md  funnel-metrics.md
knowledge/sources/: README.md  bi-tool.md  pulse.md  release-agent.md
scripts/: diagnose_mcp_url.py  test_mcp_url.py
skills/funnel-investigation/: skill.md
skills/hypothesis-formation/: skill.md
skills/investigation-summary/: skill.md
skills/release-metric-correlation/: skill.md
tests/: conftest.py
war_room/: conversation_repository.py  db.py  knowledge_loader.py  models.py  orchestrator.py  saved_investigation_repository.py
(+27 files in other folders)
